--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 /* ================================
-   NAVBAR
+   NAVBAR1
 ================================ */
 .navbar {
   position: fixed;
