--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,8 @@ footer {
   transition: none !important;
 }
 
+.carousel.carousel-fade .carousel-item {
+  transition: opacity .35s ease-in-out;
+}
+
+
