--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer>
-  <p>© 2025 – Locations de charme à Gérardmer</p>
+<footer class="text-center py-2">
+  <p class="mb-0">© 2025 – Locations de charme à Gérardmer</p>
 </footer>
