--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <body>
   {% include navbar.html %}
 
-  <main class="section">
+  <main>
     {{ content }}
   </main>
   {% include footer.html %}
