--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@ body{
    color: #3a2a1f;
    display: flex;
    flex-direction: column;
-   overflow-x: hidden;
-   padding-top: 72px; /* ajuste si besoin */
+   overflow-x: visible;
 }
 
 main{
@@ -37,14 +36,10 @@ main{
 .site-navbar{
    background: linear-gradient(to right, #2b1e16, #3b2a20);
    padding: 1rem 2rem;
-   
-   position: fixed;   /* ✅ fixed */
+   position: sticky;
    top: 0;
-   left: 0;
-   right: 0;
-   width: 100%;
-   
    z-index: 2000;
+
 }
 
 .nav-container{
