--- a/_includes/gallery_from_folder.html
+++ b/_includes/gallery_from_folder.html
@@ -18,12 +18,20 @@ Usage:
 {%- assign thumbs_folder = include.thumbs_folder | default: folder -%}
 {%- assign maxw = include.max_width | default: "900px" -%}
 
-{%- assign imgs = site.static_files
-  | where_exp: "f", "f.path contains folder"
-  | where_exp: "f", "f.extname == '.jpg' or f.extname == '.jpeg' or f.extname == '.png' or f.extname == '.webp'"
-  | where_exp: "f", "f.path contains '/thumbs/' == false"
-  | sort: "name"
--%}
+
+{%- assign imgs = "" | split: "" -%}
+
+{%- for f in site.static_files -%}
+  {%- if f.path contains folder -%}
+    {%- if f.extname == ".jpg" or f.extname == ".jpeg" or f.extname == ".png" or f.extname == ".webp" -%}
+      {%- unless f.path contains "/thumbs/" -%}
+        {%- assign imgs = imgs | push: f -%}
+      {%- endunless -%}
+    {%- endif -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- assign imgs = imgs | sort: "name" -%}
 
 {%- if imgs and imgs.size > 0 -%}
 
