--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,6 @@ footer{
 }
 
 body.modal-open .navbar {
-  visibility: none;     /* ou display:none */
+  display: none;     /* ou display:none */
   pointer-events: none;
 }
